# guise

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/guise/: nlp.html  tools.html  util.html  word_clouds.html
_sources/: table_of_contents.rst.txt
_sources/module_docs/: guise.rst.txt
_sources/module_docs/guise/: examples.rst.txt  nlp.rst.txt  tools.rst.txt  util.rst.txt  word_clouds.rst.txt  word_scoring.rst.txt
_sources/module_docs/guise/examples/: energy_startups.rst.txt
docsrc/: index.rst
guise/: __init__.py  nlp.py  tools.py  util.py  word_clouds.py  word_scoring.py
guise/examples/: __init__.py
guise/examples/energy_startups/: __init__.py
guise/examples/energy_startups/data/: energy5.xlsx
misc/: fingerprinting_web_pages.ipynb  guise demo.ipynb  harris-trump-debate.ipynb  word_frequencies_in_different_languages.ipynb
misc/markdowns/: guise demo.md
module_docs/: guise.html
module_docs/guise/: examples.html  nlp.html  tools.html  util.html  word_clouds.html  word_scoring.html
module_docs/guise/examples/: energy_startups.html
tests/: test_smoke.py
