[metadata]
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
version = 0.0.1
description = Semantic fingerprinting
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = guise
display_name = guise

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
    colour
    dol
    flair
    html2text
    importlib_resources
    lexis
    pandas
    py2store
    requests
    wordcloud

