[metadata]
name = guise
version = 0.0.4
url = https://github.com/thorwhalen/guise
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = apache-2.0
author = Thor Whalen
description = Semantic fingerprinting
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = guise

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	colour
	dol
	flair
	html2text
	importlib_resources
	lexis
	pandas
	py2store
	requests
	wordcloud
	nltk

